--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -898,6 +898,12 @@
 <dt>Retiring allowances</dt>
 <dd> <p><strong>Do not </strong>report retiring allowances using box 14.</p></dd>
 
+<dt>Travel in a prescribed zone</dt>
+<dd>Report the total amount of the travel benefit paid to your employees using box 14 <strong>and</strong> <a href="#cd_32">code 32</a>. 
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
+</dd>
+
+
 <dt>Canadian Forces personnel and police officers</dt>
 <dd>Report the employment income, up to the maximum rate of pay earned by a lieutenant-colonel of the Canadian Armed Forces, using code box 14 <strong>and</strong> <a href="#cd_43">code 43</a>.</p></dd>
 
