--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1107,11 +1107,11 @@
 <p>Give your employee proof of the amounts of RPP contributions for all tax-exempt income.</p>
 </dd>
 
-<dt>RPP contributions (past services)</dt>
-<dd>If the amount is for </p>
+<dt><abbr title="Registered pension plan">RPP</abbr> contributions (past services)</dt>
+<dd>Report the contributions the employee made to buy past services for: </p>
 <ul>
-            <li>1989 or earlier years while a contributor, report the amount using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
-            <li>1989 or earlier years while not a contributor, report the amount using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
+            <li>1989 or earlier years while a contributor, using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
+            <li>1989 or earlier years while <strong>not</strong> a contributor, using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
             </ul>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/retirement.html">Savings and pension plans</a></p>
 
@@ -1673,7 +1673,7 @@
 			</li>
 			<li class="code-num">
             <details>
-            <summary id="cd_74">Code 74&nbsp;– Past service contributions for 1989 or earlier years while a contributor</summary> 
+            <summary id="cd_74">Code 74 – Past service contributions for 1989 or earlier years while a contributor <span class="label label-info">Jeremiah</span></summary> 
  <p >Report the amount for past service contributions for 1989 or earlier years while the employee was a contributor using code 74  <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
          
   
@@ -1681,7 +1681,7 @@
 			</li>
 			<li class="code-num">
             <details>
-            <summary id="cd_75">Code 75&nbsp;– Past service contributions for 1989 or earlier years while not a contributor</summary> 
+            <summary id="cd_75">Code 75 – Past service contributions for 1989 or earlier years while not a contributor <span class="label label-info">Jeremiah</span></summary> 
           <p >Report the amount for past service contributions for 1989 or earlier years while the employee was not a contributor using code 75  <strong>and</strong> <a href="#bx_20">box 20</a>.</p> 
 
             </details> 
