--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -896,7 +896,14 @@
 </dd>
 
 <dt>Retiring allowances</dt>
-<dd> <p><strong>Do not </strong>report retiring allowances using box 14.</p></dd>
+<dd> <p><strong>Do not </strong>report retiring allowances using box 14:</p>
+<ul>
+	<li>use <a href="#cd_66">code 66</a> to report eligible retiring allowances using </li>
+	<li>use <a href="#cd_67">code 67</a> to report non-eligible retiring allowances</li>
+	<li>use <a href="#cd_69">code 69</a> to report non-eligible retiring allowances paid to your employee who is registered, or entitled to be registered under the Indian Act using </li>
+	
+</ul>
+</dd>
 
 <dt>Travel in a prescribed zone</dt>
 <dd>Report the total amount of the travel benefit paid to your employees using box 14 <strong>and</strong> <a href="#cd_32">code 32</a>. 
@@ -1501,12 +1508,12 @@
 			<li class="code-num">
             <details>
             <summary id="cd_32">Code 32 – Travel in a prescribed zone <span class="label label-info">Jeremiah</span></summary> 
-           <p>Report the total amount of the travel benefit paid to your employees using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
+           <p>Report the total amount of the travel benefit paid in a prescribed zone to your employee using code 32 <strong>and</strong> <a href="#bx_14">box 14</a>. </p>
 
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Medical travel assistance </dt>
-<dd>Report the total amount of the travel benefit using code 32 <strong>and</strong> <a href="#cd_33">code 33</a> for the medical portion only.</dd>
+<dd>Report the total amount of the medical travel benefit using code 32 <strong>and</strong> <a href="#cd_33">code 33</a> for the medical portion only.</dd>
 </dl>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p></dd>
 
