--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -906,13 +906,13 @@
 </dd>
 
 <dt>Travel in a prescribed zone</dt>
-<dd>Report the total amount of the travel benefit paid to your employees using box 14 <strong>and</strong> <a href="#cd_32">code 32</a>. 
+<dd><p>Report the total amount of the travel benefit paid to your employees using box 14 <strong>and</strong> <a href="#cd_32">code 32</a>.</p> 
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
 </dd>
 
 <dt>Board and lodging </dt>
-<dd><p>Report the total amount of the board and lodging paid your employee using box 14 <strong>and</strong> <a href="#cd_30">code 30</a>. </p>
-<p><strong>Do not </strong>report using box 14 if you paid lodging and housing at <strong>special work sites</strong>strong>, use <a href="#cd_31">code 31</a> for the tax-exempt board, lodging and housing at the special work sites. </p>
+<dd><p>Report the total amount of the board and lodging benefit paid your employee using box 14 <strong>and</strong> <a href="#cd_30">code 30</a>. </p>
+<p><strong>Do not </strong>report using box 14 if you paid lodging and housing benefit at <strong>special work sites</strong>, use <a href="#cd_31">code 31</a> for the tax-exempt board, lodging and housing at the special work sites. </p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
 </dd>
 
@@ -1488,21 +1488,29 @@
 <h4>Other information</h4>		
       <li class="code-num">
             <details>
-            <summary id="cd_30">Code 30 – Board and lodging</summary> 
-            <p>If you provided an employee with free or subsidized housing, or board and lodging, enter code 30 and the corresponding taxable amount. </p>
-            <p>Also report this amount in box 14.</p>
-            <h5>Utilities for a member of the clergy receiving housing allowance</h5>
+            <summary id="cd_30">Code 30 – Board and lodging <span class="label label-info">Jeremiah</span></summary> 
+            <p>Report the total amount of the board and lodging paid your employee using code 30 <strong>and</strong> <a href="#bx_14">box 14</a>.</p>
+          <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+<dt>Member of the clergy or of a religious order</dt>
+<dd><p>Report the amount for the housing benefit you paid to your employee who is a member of the clergy that is <strong>eligible </strong> part of your cost for those utilities (electricity, heat, water and sewer) using code 30 and all other utilities not eligible using <a href="#cd_40">code 40</a>. </p>
+ <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/clergy.html">Housing and utilities expenses - Provided to a member of the clergy or of a religious order</a></p>
+</dd>
+</dl>
+     <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/board-lodging-expenses.html">Board, lodging, housing and utilities expenses</a></p>
+     
             <p>Report in code 30 if you paid for utilities (or provide them) for a member of the clergy, add the eligible part of your cost for those utilities (electricity, heat, water and sewer) to the housing allowance. </p>
             <p>Report all other utilities under code 40.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
+            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/board-lodging-expenses.html">Board, lodging, housing and utilities expenses</a></p>
             </details> 
 			</li>
 			<li class="code-num">
             <details>
-            <summary id="cd_31">Code 31&nbsp;– Special work site</summary> 
-            <p>If your employee received a benefit for board and lodging at a special work site in a prescribed zone and you filled out Form TD4, Declaration of Exemption &ndash; Employment at a Special Work Site, enter code 31 and the corresponding amount. </p>
-            <p><strong>Do not </strong>report this amount in box 14 or under code 30.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/index.html">Determine if a benefit is taxable</a></p>
+            <summary id="cd_31">Code 31 – Special work site <span class="label label-info">Jeremiah</span></summary> 
+        <p >Report the tax-exempt board, lodging and housing at special work sites paid to your employee using code 31 <strong>and</strong> the amount of the board and lodging benefit that is <strong>not</strong> considered paid in a prescribed zone using <a href="#cd_30">code 30</a>. </p>
+ <p><strong>Do not </strong>report the <strong>tax-exempt </strong>benefit using box 14 or code 30.</p>
+<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
+
             </details> 
 			</li>
 			<li class="code-num">
