--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -913,7 +913,7 @@
 <dt>Board and lodging </dt>
 <dd><p>Report the total amount of the board and lodging benefit paid your employee using box 14 <strong>and</strong> <a href="#cd_30">code 30</a>. </p>
 <p><strong>Do not </strong>report using box 14 if you paid lodging and housing benefit at <strong>special work sites</strong>, use <a href="#cd_31">code 31</a> for the tax-exempt board, lodging and housing at the special work sites. </p>
-<p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/special-site.html">Board, lodging, housing, utilities and travel expenses - Provided to an employee in special work sites, including prescribed zones</a></p>
+   <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/board-lodging-expenses.html">Board, lodging, housing and utilities expenses</a></p>
 </dd>
 
 <dt>Canadian Forces personnel and police officers</dt>
