--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -884,13 +884,15 @@
 <dl class="dl-horizontal">
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd></dd>
+<dd><strong>Do not</strong> report tax-exempt employment income you paid to your employee who is registered, or entitled to be registered under the Indian Act using box 014, use <a href="#cd_71">code 71</a> or for a self-employed worker use <a href="#cd_88">code 88</a>.
+</dd>
 
 <dt>Self-employment workers</dt>
 <dd> <p><strong>Do not </strong>report self-employment income you paid to a worker who is a:</p>
 <ul>
 	<li>Taxi drivers and drivers of other passenger-carrying vehicles using box 14, use <a href="#cd_82">code 82</a></li>
 	<li>Barber or hairdresser using box 14, use <a href="#cd_83">code 83</a></li>
+	<li>Registered, or entitled to be registered under the Indian Act using box 14, use <a href="#cd_88">code 88</a></li>
 	
 </ul>
 </dd>
@@ -1498,10 +1500,7 @@
 </dd>
 </dl>
      <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/board-lodging-expenses.html">Board, lodging, housing and utilities expenses</a></p>
-     
-            <p>Report in code 30 if you paid for utilities (or provide them) for a member of the clergy, add the eligible part of your cost for those utilities (electricity, heat, water and sewer) to the housing allowance. </p>
-            <p>Report all other utilities under code 40.</p>
-            <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/board-lodging-expenses.html">Board, lodging, housing and utilities expenses</a></p>
+                
             </details> 
 			</li>
 			<li class="code-num">
