--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -442,7 +442,7 @@
   </ul>
 </dd>
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not</strong> report tax-exempt pension or superannuation income you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 016, use <a href="#cd146">code 146</a>.
 </dd>
 
@@ -518,7 +518,7 @@
 <dt>Unregistered plan</dt>
 <dd>Report the pension benefits you paid from a pension fund or plan that is <strong>not</strong> registered using box 018 <strong>and</strong> <a href="#cd190">code 190</a>. </dd>
 
-<dt>Indian (exempt income)</dt>
+<dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not</strong> report tax-exempt lump-sum payments you paid to a recipient who is registered, or entitled to be registered under the Indian Act using box 018, use <a href="#cd148">code 148</a>.
 </dd>
 
@@ -986,7 +986,7 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 144 – Indian (exempt income) – Other income </summary> 
+ <details>  <summary>Code 144 – Indian (exempt income) – Other income <span class="wb-inv">Keywords: Indians indigenous first nations</span></summary> 
   <p  id="cd144">Report the tax-exempt income that is not reported elsewhere on the T4A slip that you paid to a recipient who is registered, or entitled to be registered under the Indian Act using code 144.</p> 
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
 <p><strong>Do not</strong> report this amount using any boxes.</p> 
@@ -996,7 +996,7 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 146 – Indian (exempt income) – Pension or superannuation </summary> 
+ <details>  <summary>Code 146 – Indian (exempt income) – Pension or superannuation <span class="wb-inv">Keywords: Indians indigenous first nations</span></summary> 
 <p  id="cd146">Report the tax-exempt income from pension or superannuation you paid to a recipient who is registered, or entitled to be registered under the Indian Act using code 146.</p>
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
 <p><strong>Do not</strong> report this amount using box 016.</p> 
@@ -1005,7 +1005,7 @@
 </li>
 
 <li class="code-num">
- <details>  <summary>Code 148 – Indian (exempt income) – Lump-sum payments </summary> 
+ <details>  <summary>Code 148 – Indian (exempt income) – Lump-sum payments <span class="wb-inv">Keywords: Indians indigenous first nations</span></summary> 
 <p  id="cd148">Report the tax-exempt income from a lump-sum payment you paid to a recipient who is registered, or entitled to be registered under the Indian Act using code 148.</p>
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
 <p><strong>Do not</strong> report this amount using box 018.</p> 
@@ -1099,7 +1099,7 @@
  </details> 
 </li>
 <li class="code-num">
- <details>  <summary>Code 195 – Indian (exempt income) – PRPP payments </summary> 
+ <details>  <summary>Code 195 – Indian (exempt income) – PRPP payments <span class="wb-inv">Keywords: Indians indigenous first nations</span></summary> 
   <p id="cd195">Report the tax-exempt income from a pooled registered pension plan (<abbr title="Pool registered pension plan">PRPP</abbr>) you paid to a recipient who is registered, or entitled to be registered under the Indian Act using code 195.</p> 
 <p>Generally, income is exempt from tax when a person receives&nbsp;them as a result of employment income that was exempt from tax. If a part of the employment income was exempt, then a similar part of these amounts is also exempt.</p> 
 <p><strong>Do not</strong> report this amount using box 018.</p> 
