--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -568,14 +568,7 @@
             <p>Report the amount of the Indian fisher or worker's insurable earnings you used to calculate their EI premiums. </p>
             <p>Report "0" if there are no insurable earnings.</p>
             </dd>
-            <dt id="h_2_6">Box 29 &ndash; Employment code</dt><dd>
-            <p>Enter the appropriate code for the occupation of the Indian worker:</p>
-            <ul>
-            <li><strong>code 13 </strong>for barbers or hairdressers </li>
-            <li><strong>code 12 </strong>for taxi drivers or drivers of other passenger-carrying vehicles </li>
-            <li><strong>code 17 </strong>for self-employed fishers </li>
-            </ul>
-            </dd>
+          
             <dt id="h_2_7">Box 55 &ndash; Employee's PPIP premiums</dt><dd>
             <p>If the person worked in Quebec, report the PPIP premiums you deducted from their gross income earned in Quebec.</p>
             </dd>
@@ -1257,12 +1250,12 @@
             <p>Enter the appropriate employment code in box 29 if one of the following situations applies. Otherwise, leave it blank.</p>
             <ul>
             <li>11 - Placement or employment agency worker</li>
-            <li>12 - Taxi drivers or drivers of other passenger-carrying vehicles</li>
-            <li>13 - Barbers or hairdressers</li>
+            <li>12 - Taxi drivers or drivers of other passenger-carrying vehicles, including workers who are registered, or entitled to be registered under the Indian Act<span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
+            <li>13 - Barbers or hairdressers, including workers who are registered, or entitled to be registered under the Indian Act<span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
             <li>14 - Withdrawal from a prescribed salary deferral arrangement plan</li>
             <li>15 - Seasonal Agricultural Workers Program</li>
             <li>16 - Detached employee &ndash; Social security agreement</li>
-            <li>17 - Self-employed fishing income</li>
+            <li>17 - Self-employed fishing income, including workers who are registered, or entitled to be registered under the Indian Act<span class="wb-inv">Keywords: Indians indigenous first nations</span></li>
             </ul>
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
