--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1367,7 +1367,7 @@
 <dl class="dl-horizontal">
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd></dd>
+<dd>Report the PPIP premiums you deducted from your employee who is registered, or entitled to be registered under the Indian Act for gross income earned in Quebec using box 55.</dd>
 
 <dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
 <dd>Add situation</dd>
@@ -1392,7 +1392,7 @@
 <dl class="dl-horizontal">
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd></dd>
+<dd>Report the self-employed income earned in Quebec from your employee who is registered, or entitled to be registered under the Indian Act using box 56.</dd>
 
 <dt>Self-employed barbers and hairdressers, taxi drivers and drivers of other passenger-carrying vehicles</dt>
 <dd>Add situation</dd>
