--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -125,7 +125,7 @@
 <p>If calling did not address your concern, use 1 of these methods to submit a service feedback form: </p>
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
-<h4 class="mrgn-tp-sm text-muted">Online form <span class="wb-inv">: Option 1 of 2</span></h4>
+<h4 class="mrgn-tp-sm text-muted">Online digital form <span class="wb-inv">: Option 1 of 2</span></h4>
 <p>Complete and submit your feedback with the  <a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/en">Online service feedback application form - RC193</a></p>
 </div>
 <div class="cnjnctn-col">
