--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -656,10 +656,11 @@
             <li><strong>does </strong>not <strong>have to report to your business establishment in person </strong>(for example, the employment contract says the employee works from a home office), the province or territory to enter in box 10 is the one where your <strong>employee's salary and wages are paid </strong>(this will normally be the location of your payroll department or payroll records) </li>
             <li>if your employee worked in <strong>more than one province or territory </strong>in the year, fill out separate T4 slips for each province or territory </li>
             </ul>
-            <p>Enter one of the following abbreviations:</p>
-            <table class="table table-striped table-condensed">
+
+            <details><summary>List of provinces and territories and their abbreviations</summary>
+            <table class="table table-striped small table-condensed">
             <caption>
-            List of provinces and territories and their abbreviations
+            
             </caption>
             <thead>
             <tr class="active">
@@ -726,23 +727,17 @@
             </tr>
             <tr>
             <td>
-            <p>Other</p>
-            <p>Enter ZZ if an employee worked in a country <strong>other than Canada or the United States</strong>, or if the employee worked in Canada beyond the limits of a province or territory (for example, on an offshore oil rig).</p>
+            <p><span class="wb-inv">Keywords: Province of employment outside Canada</span> Enter ZZ if an employee worked in a country <strong>other than Canada or the United States</strong>, or if the employee worked in Canada beyond the limits of a province or territory (for example, on an offshore oil rig).</p>
             </td>
             <td>
-            <p>&nbsp;</p>
             <p>ZZ</p>
             </td>
             </tr>
             </tbody>
             </table>
+	    </details>
 
- <h4>Specific situations</h4>
-<dl class="dl-horizontal">
 
-<dt>Province of employment outside Canada</dt>
-<dd></dd>
-</dl>
             </details>
 		    </li>
 	
