--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -649,14 +649,7 @@
             <details>
             <summary id="bx_10">Box 10&nbsp;– Province of employment</summary>
             <p>Enter the provincial or territorial abbreviation for the province or territory of employment. This is not always the province where the employer is located. </p>
-            <p>Learn more: <a href="/cra-arc/payroll/employee/poe.html">Determine the province of employment (POE)</a></p>
-            <p>If your employee:</p>
-            <ul>
-            <li>reports to your <strong>business establishment in person</strong>, the province or territory to enter in box 10 is the one where that <strong>establishment is located </strong>(there is no minimum amount of time the employee has to report to that place) </li>
-            <li><strong>does </strong>not <strong>have to report to your business establishment in person </strong>(for example, the employment contract says the employee works from a home office), the province or territory to enter in box 10 is the one where your <strong>employee's salary and wages are paid </strong>(this will normally be the location of your payroll department or payroll records) </li>
-            <li>if your employee worked in <strong>more than one province or territory </strong>in the year, fill out separate T4 slips for each province or territory </li>
-            </ul>
-
+            
             <details><summary>List of provinces and territories and their abbreviations</summary>
             <table class="table table-striped small table-condensed">
             <caption>
@@ -737,6 +730,12 @@
             </table>
 	    </details>
 
+  <h4>Specific situation</h4>
+<dl class="dl-horizontal">
+
+<dt>More than one province or territory</dt>
+<dd>Fill out separate T4 slips for each province or territory if your employee worked in <strong>more than one province or territory </strong>in the year.</dd></dl>
+            <p>Learn more: <a href="/cra-arc/payroll/employee/poe.html">Determine the province of employment (POE)</a></p>
 
             </details>
 		    </li>
