--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -647,7 +647,7 @@
 </li>
 	<li class="code-num">             
             <details>
-            <summary id="bx_10">Box 10&nbsp;– Province of employment</summary>
+            <summary id="bx_10">Box 10&nbsp;– Province of employment <span class="label label-info">Jeremiah</span></summary>
             <p>Enter the provincial or territorial abbreviation for the province or territory of employment. This is not always the province where the employer is located. </p>
             
             <details><summary>List of provinces and territories and their abbreviations</summary>
@@ -742,13 +742,22 @@
 	
 	<li class="code-num">
    <details>
-            <summary id="bx_12">Box 12&nbsp;– Social insurance number (SIN)</summary>
+            <summary id="bx_12">Box 12 – Social insurance number (SIN) <span class="label label-info">Jeremiah</span></summary>
             <p>Enter the SIN provided by the employee.</p>
-            <p>If you do not have the employee's SIN, enter 9 zeros. You still have to file their T4 slip without the SIN. </p>
-            <p>If your employee had a SIN beginning with a 9 and later in the year received a permanent SIN, use the permanent SIN in box 12.</p>
-            <p> <strong>Do not </strong>prepare 2 T4 slips. </p>
-            <p>Learn more: <a href="/cra-arc/payroll/employee/sin.html">Get the social insurance number (SIN)</a></p>
-            </details>
+          
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
+<dt>No SIN</dt>
+<dd>Enter 9 zeros if you do not have the employee's SIN. You still have to file their T4 slip without the SIN. </dd>
+<dt>SIN beginning with a 9 and received a permanent SIN</dt>
+<dd><p>Enter the permanent SIN if the employee had a SIN beginning with a 9 and later in the year received a permanent SIN.</p>
+<p> <strong>Do not </strong>prepare 2 T4 slips. </p>
+</dd>
+</dl>
+	<p>Learn more: <a href="/cra-arc/payroll/employee/sin.html">Get the social insurance number (SIN)</a></p>
+
+
+    </details>
 </li>
 		
 
