--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -126,7 +126,7 @@
 	<div class="cnjnctn-type-or cnjnctn-xs">
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">Online digital form <span class="wb-inv">: Option 1 of 2</span></h4>
-<p>Complete and submit your feedback with the  <a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/en">Online service feedback application form - RC193</a></p>
+<p>Complete and submit your feedback with the  <a href="https://apps.cra-arc.gc.ca/ebci/uisp/rc193/en">Online digital service feedback form - RC193</a></p>
 </div>
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">PDF form <span class="wb-inv">: Option 2 of 2</span></h4>
