--- a/cops/service-feedback/sf.html
+++ b/cops/service-feedback/sf.html
@@ -130,7 +130,7 @@
 </div>
 <div class="cnjnctn-col">
 <h4 class="mrgn-tp-sm text-muted">PDF form <span class="wb-inv">: Option 2 of 2</span></h4>
-<p>Fill out your form on the  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc193.html">PDF version of the form - RC193</a> </p>
+<p>Fill out your form on the  <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc193.html">PDF version - RC193</a> </p>
 	<details>
 <summary>Ways to submit your PDF form to the CRA</summary>
    <h4>Online with 1 of the CRA sign in services</h4>
