--- a/payroll/calculate/how/tax.html
+++ b/payroll/calculate/how/tax.html
@@ -1335,26 +1335,26 @@ Claim code </th> </tr> </thead>
                   </ul>
                </details>
                <details>
-                  <summary> Manitoba </summary>
+                  <summary> Beginning July 1, 2023 - Manitoba </summary>
                   <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
                      <li class="cnjnctn-col">
                         <h4 class="mrgn-tp-sm text-muted h4">Common pay periods per year<span class="wb-inv">: Option 1</span></h4>
                         <ul>
-                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4032/2023/t4032mb-1-12pp-23eng.pdf">12 periods (Monthly) [PDF]</a> </li>
-                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4032/2023/t4032mb-1-24pp-23eng.pdf">24 periods (Semi-monthly) [PDF]</a> </li>
-                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4032/2023/t4032mb-1-26pp-23eng.pdf">26 periods (Biweekly) [PDF]</a> </li>
-                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4032/2023/t4032mb-1-52pp-23eng.pdf">52 periods (Weekly) [PDF]</a> </li>
+                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4032/2023/t4032-mb-12pp-23-eng.pdf">12 periods (Monthly) [PDF]</a> </li>
+                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4032/2023/t4032-mb-24pp-23-eng.pdf">24 periods (Semi-monthly) [PDF]</a> </li>
+                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4032/2023/t4032-mb-26pp-23-eng.pdf">26 periods (Biweekly) [PDF]</a> </li>
+                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4032/2023/t4032-mb-52pp-23-eng.pdf">52 periods (Weekly) [PDF]</a> </li>
                         </ul>
                      </li>
                      <li class="cnjnctn-col">
                         <h4 class="mrgn-tp-sm text-muted h4">Uncommon pay periods per year<span class="wb-inv">: Option 2</span></h4>
                         <ul>
-                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008mb-1-10pp-23eng.pdf">10 periods [PDF]</a> </li>
-                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008mb-1-13pp-23eng.pdf">13 periods [PDF]</a> </li>
-                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008mb-1-22pp-23eng.pdf">22 periods [PDF]</a> </li>
-                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008mb-1-27pp-23eng.pdf">27 periods (Biweekly) [PDF]</a> </li>
-                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008mb-1-53pp-23eng.pdf">53 periods (Weekly) [PDF]</a> </li>
-                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008mb-1-240pp-23eng.pdf">240 periods (Daily) [PDF]</a> </li>
+                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008-mb-10pp-23-eng.pdf">10 periods [PDF]</a> </li>
+                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008-mb-13pp-23-eng.pdf">13 periods [PDF]</a> </li>
+                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008-mb-22pp-23-eng.pdf">22 periods [PDF]</a> </li>
+                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008-mb-27pp-23-eng.pdf">27 periods (Biweekly) [PDF]</a> </li>
+                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008-mb-53pp-23-eng.pdf">53 periods (Weekly) [PDF]</a> </li>
+                           <li><a href="https://www.canada.ca/content/dam/cra-arc/migration/cra-arc/tx/bsnss/tpcs/pyrll/t4008/2023/t4008-mb-240pp-23-eng.pdf">240 periods (Daily) [PDF]</a> </li>
                         </ul>
                      </li>
                   </ul>
