--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -997,8 +997,10 @@
 </dd>
 
 
-<dt>Self-employment workers</dt>
-<dd> Report <strong>only</strong> the amount you deducted for the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums using using box 18 <strong>and</strong> <a href="#bx_24">box 24</a>.</dd>
+<dt>Self-employed fishers, barbers and hairdressers, taxi drivers and drivers of other passenger‑carrying vehicles</dt>
+<dd> Report the amount you remitted for the the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums using box 18. </p> 
+<p>You must also report insurable earnings using <a href="#bx_24">box 24</a>. </p>
+</dd>
 
 <dt>Province of employment is Quebec</dt>
 <dd> <p>Report the amount you deducted for your employee's share of the reduced <abbr title="Employment insurance">EI</abbr> premiums using box 18.</p>
