--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -956,8 +956,7 @@
 
             <details>
             <summary id="bx_18">Box 18&nbsp;– Employee's EI premiums <span class="label label-info">Jeremiah</span></summary>
-            <p>Report the amount you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18.</p>
-<p>You must also report insurable earnings using <a href="#bx_24">box 24</a>. </p>
+            <p>Report the amount you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
                       
             <p><strong>Do not </strong>report the employer's share of EI premiums on the T4 slip.</p>
          
@@ -984,35 +983,27 @@
         </ul>
   </dd>
 <dt>Salary deferral arrangements</dt>
-<dd><p>Report the amount you deducted from the participant's gross salary (including deferred amounts) while the person was working of the <abbr title="Employment insurance">EI</abbr> premiums using box 18.</p>
-<p>You must also report insurable earnings using <a href="#bx_24">box 24</a>. </p>
+<dd><p>Report the amount you deducted from the participant's gross salary (including deferred amounts) while the person was working of the <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>.</p>
  <p><strong>Do not </strong>deduct EI premiums or report any amount using box 18 when the deferred amount is paid to the participant under a prescribed plan during the leave period.</p>
-
+    <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/deferral.html">Payments related to salary deferral arrangements</a></p>
 </dd>
 
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd><p> Report the amount you deducted for your employee's share of the <abbr title="Employment insurance">EI</abbr> premiums using box 18.</p>
-<p>You must also report insurable earnings using <a href="#bx_24">box 24</a>. </p>
+<dd><p> Report the amount you deducted for your employee's share of the <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
 <p>Tax-exempt employment income you paid to an employee who is registered, or entitled to be registered under the Indian Act is insurable and you must deduct EI premiums.</p>
 </dd>
 
 
 <dt>Self-employed fishers, barbers and hairdressers, taxi drivers and drivers of other passenger‑carrying vehicles</dt>
-<dd> Report the amount you remitted for the the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums using box 18. </p> 
-<p>You must also report insurable earnings using <a href="#bx_24">box 24</a>. </p>
+<dd> Report the amount you remitted for the the self-employed worker's share of <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
 </dd>
 
 <dt>Province of employment is Quebec</dt>
-<dd> <p>Report the amount you deducted for your employee's share of the reduced <abbr title="Employment insurance">EI</abbr> premiums using box 18.</p>
-<p>You must also report insurable earnings using <a href="#bx_24">box 24</a>. </p>
+<dd> <p>Report the amount you deducted for your employee's share of the reduced <abbr title="Employment insurance">EI</abbr> premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>.</p>
       <p>Learn more about the:</p>
 <ul><li> Reduced EI premiums: <a href="/cra-arc/payroll/calculate/when/eirates.html#tb2">Quebec EI premium rates and maximums</a></li>
     <li>PPIP premiums: <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) Premiums | Revenu Québec</a></li>
 </ul> </dd>
-
-<dt>Province of employment outside Canada - Detached employee</dt>
-<dd><strong>Do not </strong>report any amount using box 18 if you use employment code 16 in <a href="#bx_29">box 29</a> and no other type of income is reported on the T4 slip.</dd>
-</dl>   
 
 <p>Learn more on how to determine if you need to deduct EI premiums from benefits and special payments: <a href="/cra-arc/payroll/calculate/index.html">Calculate payroll deductions and contributions</a></p>         
 
