--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -955,7 +955,7 @@
 	<li class="code-num">
 
             <details>
-            <summary id="bx_18">Box 18&nbsp;– Employee's EI premiums <span class="label label-info">Jeremiah</span></summary>
+            <summary id="bx_18">Box 18&nbsp;– Employee's EI premiums <span class="label label-success">Good</span></summary>
             <p>Report the amount you deducted for your employee's share of the employment insurance (<abbr title="Employment insurance">EI</abbr>) premiums using box 18. If you report an amount in box 18, you have to report insurable earnings using <a href="#bx_24">box 24</a>. </p>
                       
             <p><strong>Do not </strong>report the employer's share of EI premiums on the T4 slip.</p>
@@ -1573,12 +1573,14 @@
 			<li class="code-num">
             <details>
             <summary id="cd_69">Code 69 – Indian (exempt income) – <span class="nowrap">Non-eligible </span>retiring allowances <span class="label label-info">Jeremiah</span></summary> 
-            <p>Report tax-exempt retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that are not eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
+            <p>Report tax-exempt retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that are <strong>not eligible for transfer</strong> to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
-<dt>Taxable or partly tax-exempt retiring allowance <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd>If you pay taxable or partly tax-exempt retiring allowance, you must report using code 69 <strong>and</strong> <a href="#cd_66">code 66</a> if it is an eligible retiring allowance or <a href="#cd_67">code 67</a> if it is a non-eligible retiring allowance</dd>
+<dt>Partly tax-exempt - Not eligible for transfer  to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dd><p>Report retiring allowances you paid that are not eligible to be transferred using code 69 for the amount that is partly tax-exempt <strong>and</strong> <a href="#cd_67">code 67</a> for the amount that is partly taxable.</dd>
+<dt>Eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dd><strong>Do not </strong>report eligible retiring allowances using code 69, use <a href="#cd_66">code 66</a>.</dd>
 </dl>
 
           <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/indianact.html">Employee who is registered, or entitled to be registered under the Indian Act</a></p>
