--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1539,7 +1539,7 @@
 			<li class="code-num">			
             <details>
             <summary id="cd_66">Code 66&nbsp;– Eligible retiring allowances <span class="label label-success">Good</span></summary> 
-            <p>Report eligible retiring allowances you paid in the year to your employee that are eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred using code 66. </p>
+            <p>Report eligible retiring allowances you paid in the year to your employee that are eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>, even if it was not transferred using code 66. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
 
  <h4>Specific situation</h4>
@@ -1556,7 +1556,7 @@
 			<li class="code-num">
             <details>
             <summary id="cd_67">Code 67&nbsp;– <span class="nowrap">Non-eligible</span> retiring allowances <span class="label label-success">Good</span></summary> 
-             <p>Report non-eligible retiring allowances you paid in the year to your employee that were <strong>not</strong> eligible for transfer to an <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 67. </p>
+             <p>Report non-eligible retiring allowances you paid in the year to your employee that were <strong>not</strong> eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 67. </p>
             <p><strong>Do not </strong>report this amount in box 14.</p>
 
  <h4>Specific situation</h4>
@@ -1573,12 +1573,12 @@
 			<li class="code-num">
             <details>
             <summary id="cd_69">Code 69 – Indian (exempt income) – <span class="nowrap">Non-eligible </span>retiring allowances <span class="label label-info">Jeremiah</span></summary> 
-            <p>Report tax-exempt retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that are <strong>not eligible for transfer</strong> to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
+            <p>Report tax-exempt non-eligible retiring allowances you paid to your employee who is registered, or entitled to be registered under the Indian Act that were <strong>not eligible for transfer</strong> to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr> using code 69.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
-<dt>Partly tax-exempt - Not eligible for transfer  to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd><p>Report retiring allowances you paid that are not eligible to be transferred using code 69 for the amount that is partly tax-exempt <strong>and</strong> <a href="#cd_67">code 67</a> for the amount that is partly taxable.</dd>
+<dt>Partly tax-exempt non-eligible for transfer  to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
+<dd><p>Report non-eligible retiring allowances you paid that are not eligible to be transferred using code 69 for the amount that is partly tax-exempt <strong>and</strong> <a href="#cd_67">code 67</a> for the amount that is partly taxable.</dd>
 <dt>Eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not </strong>report eligible retiring allowances using code 69, use <a href="#cd_66">code 66</a>.</dd>
 </dl>
