--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1578,7 +1578,7 @@
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
 <dt>Partly tax-exempt non-eligible for transfer  to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span> <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
-<dd><p>Report non-eligible retiring allowances you paid that are not eligible to be transferred using code 69 for the amount that is partly tax-exempt <strong>and</strong> <a href="#cd_67">code 67</a> for the amount that is partly taxable.</dd>
+<dd><p>Report non-eligible retiring allowances you paid that are not eligible to be transferred using code 69 for  amounts that are partly tax-exempt <strong>and</strong> <a href="#cd_67">code 67</a> for amounts that are partly taxable.</dd>
 <dt>Eligible for transfer to a <abbr title="Registered pension plan">RPP</abbr>, <abbr title="Registered retirement savings plan">RRSP</abbr> or <abbr title="Pooled registered pension plan">PRPP</abbr>  <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><strong>Do not </strong>report eligible retiring allowances using code 69, use <a href="#cd_66">code 66</a>.</dd>
 </dl>
