--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -1698,13 +1698,13 @@
 			<li class="code-num">
             <details>
             <summary id="cd_87">Code 87 – Emergency services volunteer exempt amount <span class="label label-info">Jeremiah</span></summary> 
-	<p>Report tax-exempt employment income (up to $1,000) you paid to your employee who is an emergency volunteer as a government, a municipality, or a public authority using using code 87.</p>
-<p><strong>Do not </strong>report the tax-exempt amount in box 14.</p>
+	<p>Report tax-exempt employment income (up to $1,000) you paid (as a government, a municipality, or a public authority) to a person who performed firefighter or search and rescue duties as a volunteer using code 87.</p>
+<p><strong>Do not </strong>report this amount in box 14.</p>
 
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Employment income of $1,000 or more</dt>
-<dd><strong>Do not </strong>report the taxable employment income ($1,000 or more) you paid to your employee who is an emergency volunteer using code 87, use <a href="#bx_14">box 14</a>.  </dd>
+<dd><strong>Do not </strong>report taxable employment income ($1,000 or more) you paid to your employee who is an emergency volunteer using code 87, use <a href="#bx_14">box 14</a>.  </dd>
 <dt>Other than volunteer</dt>
 <dd><strong>Do not </strong>report the employment income if the individual other than as a volunteer has the same or similar duties using code 87, use <a href="#bx_14">box 14</a>.  </dd>
 </dl>
