iden # for individuals

--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -818,10 +818,10 @@ margin-left: 38px;
   <summary>Tax identifier numbers</summary>
       <p>The following tax identifier numbers may be used depending on the situation:</p>
       <ul>
-        <li>A social insurance number (SIN)</li>
-        <li>An individual tax number (ITN)</li>
-<li>A temporary tax number (TTN)</li>
-        <li>A Canadian business number (BN) with an Underused Housing Tax (RU) program account identifier code</li>
+        <li>A social insurance number <strong>(SIN)</strong></li>
+        <li>An individual tax number <strong>(ITN)</strong></li>
+<li>A temporary tax number <strong>(TTN)</strong></li>
+        <li>A Canadian business number <strong>(BN)</strong> with an Underused Housing Tax <strong>(RU)</strong> program account identifier code</li>
       </ul>
 
 
@@ -830,19 +830,21 @@ margin-left: 38px;
 
 
         <details><summary>Tax identifier numbers for individuals</summary>
-        <p>Depending on your citizenship, if you are an individual, you must file your Underused Housing Tax return using either a SIN, an ITN, or a TTN.</p>
-        <p>If you are an individual who is a <strong>Canadian citizen or permanent resident</strong>, you <strong>must use a SIN</strong> to file your return.</p>
-        <p>If you do not already have a SIN, please contact <a href="https://canada.ca/en/employment-social-development/services/sin.html">Service Canada</a> for information on how to apply for one.</p>
-        <p>If you are an individual who is <strong>not a Canadian citizen or permanent resident</strong>, and you already have a SIN, you must use your SIN to file your return.</p>
-        <p>If you <strong>do not have a SIN</strong>, you <strong>must use an ITN</strong> to file your return. If you do not have an ITN, you must apply for one.</p>
-       
-	
-			
-		<p>If you are a non-resident needing an ITN, refer to: <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html">Applying for an individual tax number (ITN)</a></p>	  
+        <p>Depending on your citizenship, if you are an individual, you must file your return using either a SIN, an ITN, or a TTN.</p>
+<h4>Canadian citizens or permanent residents</h4>
+		<p>You must use your SIN to file your return. If you do not already have a SIN, you must <a href="https://www.canada.ca/en/employment-social-development/services/sin/apply.html" target="_blank">apply for a SIN</a>.</p>
+		<h4>Non-residents or temporary residents to Canada</h4>
+<p>If you already have a SIN, you must use it to file your return. If you do not have a SIN, you must use your ITN or TTN to file your return.</p>
+<h5>Non-residents</h5>
+		<p>If you are a non-resident and do not have an ITN, you must <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html#how" target="_blank"> apply for an ITN</a>.</p>
+<p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by filling out the application form (Form T1261) and attaching it with your completed return. Make sure to file your Form T1261, all required supporting documentation, and your Underused Housing Tax return together.</p>
 
-	<p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by filling out Form T1261 and attaching it to your completed paper UHT return. Make sure to submit your Form T1261, all required supporting documentation, and your UHT return together.  </p>
-	
-	
+		<h5>Temporary residents</h5>
+	<p>If you are a temporary resident and do not have a n ITN, you must ..... </p>
+
+
+
+		
 	</details>
         <details><summary>Tax identifier numbers for corporations</summary>
         <p>If you are a corporation, you must use a business number (BN) with an Underused Housing Tax (RU) program account identifier code to file your Underused Housing Tax return.</p>
