fix - tax iden indiv

--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -836,11 +836,12 @@ margin-left: 38px;
 		<h4>Non-residents or temporary residents to Canada</h4>
 <p>If you already have a SIN, you must use it to file your return. If you do not have a SIN, you must use your ITN or TTN to file your return.</p>
 <h5>Non-residents</h5>
-		<p>If you are a non-resident and do not have an ITN, you must <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html#how" target="_blank"> apply for an ITN</a>.</p>
-<p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by filling out the application form (Form T1261) and attaching it with your completed return. Make sure to file your Form T1261, all required supporting documentation, and your Underused Housing Tax return together.</p>
+		<p>If you do not have an ITN, you must <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html#how" target="_blank"> apply for an ITN</a>.</p>
+<p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by filling out the application form (Form T1261) and attaching it with your completed return.</p>
+		<p>Make sure to file your ITN application form, all required supporting documentation, and your Underused Housing Tax return together.</p>
 
 		<h5>Temporary residents</h5>
-	<p>If you are a temporary resident and do not have a n ITN, you must ..... </p>
+	<p>If you do not have a TTN, you must ..... </p>
 
 
 
