--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -835,12 +835,15 @@ margin-left: 38px;
 		<p>You must use your SIN to file your return. If you do not already have a SIN, you must <a href="https://www.canada.ca/en/employment-social-development/services/sin/apply.html" target="_blank">apply for a SIN</a>.</p>
 		<h4>Non-residents or temporary residents to Canada</h4>
 <p>If you already have a SIN, you must use it to file your return. If you do not have a SIN, you must use your ITN or TTN to file your return.</p>
-<h5>Non-residents</h5>
+
+		<details>
+<summary>Non-residents</summary>
 		<p>If you do not have an ITN, you must <a href="https://www.canada.ca/en/revenue-agency/services/tax/international-non-residents-tax/in-outside-canada/apply-individual-tax-number.html#how" target="_blank"> apply for an ITN</a>.</p>
 <p>If you do not have a valid ITN, and are concerned with meeting the filing deadline, you may be able to apply for one by filling out the application form (Form T1261) and attaching it with your completed return.</p>
 		<p>Make sure to file your ITN application form, all required supporting documentation, and your Underused Housing Tax return together.</p>
-
-		<h5>Temporary residents</h5>
+		</details>
+		<details>
+		<summary>Temporary residents</summary>
 	<p>If you do not have a TTN, you must ..... </p>
 
 
